--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tela1"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity5"
+            android:exported="false" />
         <activity
             android:name=".MainActivity4"
             android:exported="false"
-            android:parentActivityName=".MainActivity3"/>
+            android:parentActivityName=".MainActivity3"
+            android:theme="@style/Theme.Tela4" />
         <activity
             android:name=".MainActivity3"
             android:exported="false"
-            android:parentActivityName=".MainActivity2"/>
+            android:parentActivityName=".MainActivity2"
+            android:theme="@style/Theme.Tela3" />
         <activity
             android:name=".MainActivity2"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.Tela2" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Tela1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
